--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-  
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,200&display=swap" rel="stylesheet">
     <title>React Portfolio</title>
   </head>
   <body>
